--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: py
     
     on:
       schedule:
-        - cron: "0,15,30,45 * * * *" #~~runs at 00:00 UTC everyday (0 0 * * *)~~ Every 15 minutes
+        - cron: "0,15,30,45,55 * * * *" #~~runs at 00:00 UTC everyday (0 0 * * *)~~ Every 15 minutes and at :55
     
     jobs:
       build:
