--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: py
+name: main
     
     on:
       schedule:
-        - cron: "0,15,30,45,55 * * * *" #~~runs at 00:00 UTC everyday (0 0 * * *)~~ Every 15 minutes and at :55
+        - cron: "0,15,30,45 * * * *" #~~runs at 00:00 UTC everyday (0 0 * * *)~~ Every 15 minutes
     
     jobs:
       build:
