--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,10 @@ jobs:
             env:
               key: ${{ secrets.key }} # if run.py requires passwords..etc, set it as secrets
           - name: commit files # https://canovasjm.netlify.app/2020/11/29/github-actions-run-a-python-script-on-schedule-and-commit-changes/#steps
-            run: | #git config --local user.email "action@github.com" | git config --local user.name "GitHub Action" | git add -A
+            run: | #
+              git config --local user.email "action@github.com"
+              git config --local user.name "GitHub Action"
+              git add -A
               git commit -m "update data" -a
           - name: push changes
             uses: ad-m/github-push-action@v0.6.0
