--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 
 on:
   schedule:
-    - cron: "0,5,15,30,45 * * * *" #~~runs at 00:00 UTC everyday (0 0 * * *)~~ Every 15 minutes and :05
+    - cron: "0,15,30,45 * * * *" #~~runs at 00:00 UTC everyday (0 0 * * *)~~ Every 15 minutes
   workflow_dispatch:
     inputs:
       testname:
